[package]
name = "rocket_askama"
version = "0.1.0"
authors = ["Maksim Vykhota <m.vykhota@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.8", features = ["with-rocket"] }
rocket = "0.4"